CloudConsulting/force-app/main/default/objects/Project_Resources__c/Project_Resources__c.object-meta.xml
<CustomObject>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Project Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>