CloudConsulting/force-app/main/default/objects/Project_Resources__c/fields/HoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>HoursAllocated__c</fullName>
    <label>HoursAllocated</label>
    <summarizedField>Task__c.EstimatedHours__c</summarizedField>
    <summaryForeignKey>Task__c.Project_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>