CloudConsulting/force-app/main/default/objects/Project_Resources__c/fields/Rate_Per_Hours__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Hours__c</fullName>
    <formula>$User.Rate__c  *   RequieredHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Per Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>