CloudConsulting/force-app/main/default/objects/Project_Resources__c/fields/Rate_Per_Hours_Num__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Hours_Num__c</fullName>
    <description>Store the result of the formula field to use RollupSummary in the project</description>
    <label>Rate Per Hours Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>