CloudConsulting/force-app/main/default/objects/Project_Resources__c/fields/RequieredHours__c.field-meta.xml
<CustomField>
    <fullName>RequieredHours__c</fullName>
    <label>RequieredHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>