CloudConsulting/force-app/main/default/objects/Project_Resources__c/fields/WorkedHoursPR__c.field-meta.xml
<CustomField>
    <fullName>WorkedHoursPR__c</fullName>
    <label>WorkedHoursPR</label>
    <summarizedField>Task__c.WorkedHours__c</summarizedField>
    <summaryForeignKey>Task__c.Project_Resource__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>