CloudConsulting/force-app/main/default/objects/Project_Resources__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RequieredHours__c</columns>
    <columns>HoursAllocated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>